# loneliness_prescription_index

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
data/: DrugslisthealthdataJG1.CSV  LA_2011_supergroup_lookup.csv  README.md  drugs_list.yml
data/grouped_epds/: group_log.yml
data/postcode_lookup/: README.md
data/raw_epds/: download_log.yml
loneliness_prescription_index/: aggregate_counts.py  estimate_by_LA.py  estimate_by_MSOA.py
output/: LA_loneliness_agg.csv  LA_loneliness_stats_k5.csv  LA_loneliness_stats_k7.csv  MSOA_loneliness_agg.csv  MSOA_loneliness_stats_k5.csv  README.md  presc_2017.csv  presc_2018.csv  presc_2019.csv  presc_2020.csv
src/loneliness_prescription_index/: DATA_README.md  README.md  aggregate_counts.py  config.py  estimate_by_LA.py  estimate_by_MSOA.py  functions.py  source_data.py  testing.ipynb
src/loneliness_prescription_index/data_requirements/: download_epds.py  epd_logging.py  (+6 more)
working/: README.md  epd_201701.csv  epd_201702.csv  epd_201703.csv  epd_201704.csv  epd_201705.csv  epd_201706.csv  epd_201707.csv  epd_201708.csv  epd_201709.csv  epd_201710.csv  epd_201711.csv  epd_201712.csv  epd_201801.csv  epd_201802.csv  epd_201803.csv  epd_201804.csv  epd_201805.csv  epd_201806.csv  epd_201807.csv  epd_201808.csv  epd_201809.csv  epd_201810.csv  epd_201811.csv  epd_201812.csv  epd_201901.csv  epd_201902.csv  epd_201903.csv  epd_201904.csv  epd_201905.csv  epd_201906.csv  epd_201907.csv  epd_201908.csv  epd_201909.csv  epd_201910.csv  epd_201911.csv  epd_201912.csv  epd_202001.csv  epd_202002.csv  epd_202003.csv  (+9 more)
